Fix title z-index (#331)
Fix the search results title z-index when sticky to be lower than the suggestion dropdown

--- a/src/Orckestra.Composer.Website/UI.Package/Sass/Custom/Search/_content-tabs.scss
+++ b/src/Orckestra.Composer.Website/UI.Package/Sass/Custom/Search/_content-tabs.scss
@@ -19,7 +19,7 @@
     padding-top:10px;
     padding-bottom: 10px;
     background: #fff;
-    z-index: 1030;
+    z-index: 1029;
     @include media-breakpoint-up(lg){
       top: 136px;
       padding-top: 0;
